# api/openapi.yaml
@@ -305,25 +305,15 @@ components:
       type: object
       required:
         - id
-        - base
-        - quote
         - status
-        - created_at
       properties:
         id:
           type: string
           format: uuid
-        base:
-          type: string
-        quote:
-          type: string
         status:
           type: string
           enum:
             - pending
-        created_at:
-          type: string
-          format: date-time
 
     JobStatusDone:
       type: object
@@ -332,8 +322,6 @@ components:
         - base
         - quote
         - status
-        - created_at
-        - completed_at
         - price
         - updated_at
       properties:
@@ -348,12 +336,6 @@ components:
           type: string
           enum:
             - done
-        created_at:
-          type: string
-          format: date-time
-        completed_at:
-          type: string
-          format: date-time
         price:
           type: number
           format: double
@@ -368,7 +350,6 @@ components:
         - base
         - quote
         - status
-        - created_at
         - completed_at
         - error
       properties:
@@ -383,22 +364,11 @@ components:
           type: string
           enum:
             - failed
-        created_at:
-          type: string
-          format: date-time
         completed_at:
           type: string
           format: date-time
         error:
-          type: object
-          required:
-            - code
-            - message
-          properties:
-            code:
-              type: string
-            message:
-              type: string
+          type: string
 
     LatestQuote:
       type: object
